crates/shipper-cli/tests/snapshots/e2e_expanded__help_plan_yank.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
Generate a reverse-topological yank plan from a receipt.

Reads a prior `receipt.json` and emits the order in which to yank the released crates — dependents first, dependencies last — so downstream consumers stop resolving against the bad version before the bad version itself is pulled. Output is either human-readable `shipper yank ...` lines or structured JSON for scripting.

**Planning only.** This command does NOT execute yanks. Pipe the output through `sh`, or consume the JSON, once you've reviewed it. `shipper fix-forward` will wrap execution.

Usage: shipper-cli plan-yank [OPTIONS]

Options:
      --from-receipt <PATH>
          Path to the receipt to derive the plan from. Defaults to `<state_dir>/receipt.json` when omitted

      --compromised-only
          Restrict the plan to packages whose receipt carries a `compromised_at` marker. Without this, every `Published` package is included (full rollback). Mutually exclusive with `--starting-crate`

      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --starting-crate <CRATE>
          **Graph mode.** Given a specific broken crate name, walk the workspace's dependency graph to find every crate that transitively depends on it, and emit a yank plan covering only that affected chain (not a full rollback). Resolves the graph from the current workspace's `Cargo.toml` metadata — the receipt supplies the versions and Published-state filter

      --reason <REASON>
          Per-entry reason to embed in the yank plan (applied to every entry). If omitted, each entry's reason falls back to its receipt-level `compromised_by` field (if set)

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
